<resources>
    <string name="app_name">Dixit</string>
    <string name="main_bPlayer">Un jugador</string>
    <string name="main_bOnline">Multijugador</string>
    <string name="main_bScores">Puntuaciones</string>
    <string name="main_bRules">Reglas</string>
    <string name="main_bCards">Cartas</string>
    <string name="main_bAbout">Sobre nosotros</string>
    <string name="settings_title">Configuración</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_goRegister">Crear una cuenta</string>
    <string name="login_login">Iniciar sesión</string>
    <string name="login_empty">Rellena los campos</string>
    <string name="login_auto">Iniciando sesión...</string>
    <string name="register_title">Registro</string>
    <string name="rules_title">Reglas</string>
    <string name="settings_username">Usuario</string>
    <string name="settings_email">Email</string>
    <string name="cards_title">Cartas</string>
    <string name="settings_save">Guardar cambios</string>
    <string name="settings_password">Contraseña</string>
    <string name="settings_changeAvatar">Cambiar</string>
    <string name="unknown_error">Error desconocido. Comprueba tu conexión a internet.</string>
    <string name="settings_saving">Guardando cambios...</string>
    <string name="register_register">Registrar</string>
    <string name="register_password">Contraseña</string>
    <string name="register_email" translatable="false">Email</string>
    <string name="register_username">Nombre</string>
    <string name="register_selectAvatar">Seleccionar avatar</string>
    <string name="register_saving">Registrando usuario</string>
    <string name="register_empty">Faltan campos</string>
    <string name="register_auto">Registrando usuario ...</string>
    <string name="main_bPlay">Jugar</string>
    <string name="play_searchGame">ID partida</string>
    <string name="play_Jugar">Crear partida</string>
    <string name="play_Search">Unirme</string>
    <string name="create_game">Creando partida ...</string>
    <string name="localScores">Puntuación propia</string>
    <string name="friendsScores">Puntuación amigos</string>
    <string name="search_game">Buscando partida ...</string>
    <string name="play_reverso">Seleccionar reverso</string>
    <string name="main_bExit">Salir</string>
    <string name="play_gameCreated">Partida creada</string>
    <string name="play_newJoined">se ha unido a la partida</string>
    <string name="game_shareGame">Compartir partida</string>
    <string name="game_shareText">¡Únete a esta partida de Dixit! La ID es </string>
    <string name="game_shareSubject">Te invito a una partida de Dixit</string>
    <string name="notifications_admin_channel_name">Nombre canal admin</string>
    <string name="notifications_admin_channel_description">Descripcion canal</string>
    <string name="play_emptyID">Introduce una ID de partida</string>
    <string name="play_creatingGame">Creando partida...</string>
    <string name="play_joiningGame">Buscando partida...</string>
    <string name="play_gameJoined">Te has unido correctamente</string>
    <string name="game_btn">OK</string>
    <string name="game_id">Id. partida: </string>
    <string name="game_nameJ1">nombreJug</string>
    <string name="card_select">¿Escoges esta carta?</string>
    <string name="dialog_title">Titulo dialogo</string>
    <string name="ok">SI</string>
    <string name="cancel">NO</string>
    <string name="boton_OK">Has escogido esta carta</string>
    <string name="card_puntos">¿Cuantos puntos le das?</string>
    //RulesActiviy
    <string name="head1"> Preparación</string>
    <string name="head2"> Cuentacuentos</string>
    <string name="head3"> Otros jugadores</string>
    <string name="head4"> Puntuación</string>
    <string name="head5"> Final del turno</string>
    <string name="head6"> Final del juego</string>

    <string name="desc1">"  Cada jugador empieza en la casilla 0 y con 6 cartas en la mano. El resto se encuentran en el mazo."</string>
    <string name="desc2"> Cada turno se elegirá a un cuentacuentos que debera elegir una de las cartas de su mano y redactar una frase que tenga que ver con esta.</string>
    <string name="desc3"> El resto de jugadores elegira una carta de su mano que más se adapte a la descripcion del cuentacuentos. Después votaran intentando adivinar que carta de entre todas creen que es la del cuentacuentos.</string>
    <string name="desc4">" Si todos los jugadores(o ninguno) han acertado la carta del cuentacuentos, el cuentacuentos recibe 2 puntos.\n\t\tSino tanto el cuentacuentos como los jugadores que han acertado la carta del cuentacuentos reciben 3 puntos. \n\t\tAdemas todos los jugadores(excepto el cuentacuentos) reciben 1 punto por cada voto que reciba su carta."</string>
    <string name="desc5"> \nSe descartan las cartas jugadas y la ficha de cada jugador avanzara tantas posiciones como puntos hayan obtenido este turno.\n Despues cada jugador robara hasta tener en mano 6 cartas de nuevo y el rol de cuentacuentos pasara al siguiente jugador.</string>
    <string name="desc6">"  El juego termina cuando se roba la ultima carta.  El jugador que mas lejos haya llegado en la escala de puntuacion es el ganador."</string>
    <string name="rule1">"   Cada jugador comienza en la casilla 0 y con 6 cartas en su mano. El resto de los jugadores están en el mazo."</string>
    <string name="rule2">En cada turno se elegirá un narrador que elegirá una de las cartas de tu mano y escribirá una frase que tenga que ver con ella.</string>
    <string name="rule3">Los otros jugadores elegirán una carta de su mano que mejor se ajuste a la descripción del narrador. Luego votarán tratando de adivinar qué letra de todas las que creen que es la que tiene el narrador.</string>
    <!-- About Activity -->

    <string name="about"> Sobre nosotros</string>
    <string name="nombres"> Somos un grupo de estudiantes de la asignatura de SDM formado por: \n\n - Alberto de Arévalo Vidarte \n - Carlos Herrera Piedra \n - Juan José Gonzalez Blesa \n - David Murillo Palacios </string>
    <string name="info_partida">Información de la partida</string>
    <string name="info_create">Esperando al resto de jugadores</string>
</resources>
